fix: Horizontal scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,10 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 
+html {
+    overflow-x: hidden;
+}
+
 @font-face {
     font-family: "custom-chalk";
     src: url("../assets/Atalon.otf");
@@ -3982,7 +3986,7 @@ fieldset:disabled .btn {
     --bs-navbar-disabled-color: rgba(0, 0, 0, 0.3);
     --bs-navbar-active-color: rgba(0, 0, 0, 0.9);
     --bs-navbar-brand-padding-y: 0.3125rem;
-    --bs-navbar-brand-margin-end: 1rem;
+    --bs-navbar-brand-margin-end: 0rem;
     --bs-navbar-brand-font-size: 1.25rem;
     --bs-navbar-brand-color: rgba(0, 0, 0, 0.9);
     --bs-navbar-brand-hover-color: rgba(0, 0, 0, 0.9);
